--- a/.env.example
+++ b/.env.example
@@ -49,3 +49,8 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+DISCORD_CLIENT_ID=903982951811924000
+DISCORD_CLIENT_SECRET=ELZjZZ7Cxort0KHE1VOQUPkMnbJNj0-D
+DISCORD_CLIENT_CALLBACK=http://localhost/callback
+
